--- a/Mynotes/templates/Mynotes/home.html
+++ b/Mynotes/templates/Mynotes/home.html
@@ -8,7 +8,7 @@
             <div class="article-metadata">  
               <a class="mr-2" href="#">{{ post.agenda }}</a>
             </div>
-              <small class="text-muted">{{ post.date_posted }}</small>
+              <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
             </div>
             <h6><a class="article-title" href="#">{{ post.title }}</a></h6>
             <a class="mr-2" href="#">{{ post.author }}</a>
