--- a/Mynotes/templates/Mynotes/base.html
+++ b/Mynotes/templates/Mynotes/base.html
@@ -29,13 +29,16 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'Mynotes-home' %}">Home</a>
-              <!-- <a class="nav-item nav-link" href="{% url 'Mynotes-about' %}">About</a> -->
             </div>
             <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <form class="form-inline my-2 my-lg-0" action="{% url 'search_results' %}">
-                <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
-                <button class="btn  my-2 my-sm-0" type="submit">Search</button>
+                <form action="" method="post" action="/search/">
+                  {% csrf_token %}
+                  <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
+                  <button class="btn  my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                
               </form>
             </div>
             <!-- Navbar Right Side -->
@@ -70,7 +73,7 @@
         <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <p class='text-muted'>Nothing here yet. You can put any information here you'd like.
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest notes</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
