--- a/Mynotes/templates/Mynotes/base.html
+++ b/Mynotes/templates/Mynotes/base.html
@@ -32,10 +32,11 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
+             
               <form class="form-inline my-2 my-lg-0" action="{% url 'search_results' %}">
-                <form action="" method="post" action="/search/">
+                <form method="post" action="/search/">
                   {% csrf_token %}
-                  <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
+                  <input class="form-control mr-sm-2" type="text" name="search" placeholder="search" aria-label="Search">
                   <button class="btn  my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 
